tests/tooling/fixtures/native/execution/positive/octal_literal_basic.objc3
module OctalLiteralBasic;

let base = 0o12;

fn main() -> i32 {
  return base + 0o3;
}
