tests/tooling/fixtures/native/execution/negative/increment_decrement_unknown_target.objc3
module IncrementDecrementUnknownTarget;

fn main() -> i32 {
  value++;
  return 0;
}